# tsdt

./: .gitignore  README.md  pyproject.toml
src/tsdt/: main.py
